[package]
name = "jabba-cpc"
version = "0.1.2"  # Update version number in config.rs too!
authors = ["Laszlo Szathmary, alias Jabba Laci <jabba.laci@gmail.com>"]
edition = "2021"
description = "Copies the path of the current working dir. to the clipboard. If a parameter is given, it's also added to the path."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jabbalaci/jabba-cpc"
keywords = ["path", "clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jabba-lib = "0.1.4"

# See https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
bench = false
path = "src/main.rs"
name = "cpc"
